# ctsdk

./: CMakeLists.txt  HOW_TO_BUILD_ON_MSVC2019.md  HOW_TO_BUILD_SDL2_ON_MSVC2019.md  README.md  ctsdk.cpp  mingw.sh
tools/: CMakeLists.txt
tools/mingw1120_64/: build-info.txt
tools/mingw1120_64/uixsdk/include/SDL2/: SDL_revision.h
tools/mingw1120_64/uixsdk/include/avif/: avif.h
tools/mingw1120_64/uixsdk/include/json/: value.h
tools/mingw1120_64/uixsdk/lib/cmake/CURL/: CURLConfig.cmake  CURLTargets.cmake
tools/mingw1120_64/uixsdk/lib/cmake/SDL2/: SDL2ConfigVersion.cmake  SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake  SDL2testTargets.cmake
tools/mingw1120_64/uixsdk/lib/cmake/blend2d/: blend2d-config.cmake
tools/mingw1120_64/uixsdk/lib/cmake/jsoncpp/: jsoncpp-namespaced-targets.cmake  jsoncpp-targets.cmake  jsoncppConfig.cmake  jsoncppConfigVersion.cmake
tools/mingw1120_64/uixsdk/lib/libpng/: libpng16.cmake
tools/mingw1120_64/uixsdk/lib/pkgconfig/: jsoncpp.pc  libavif.pc  libcurl.pc  libpng16.pc  libtiff-4.pc  sdl2.pc
tools/mingw1120_64/uixsdk/lib/python3.9/: _sysconfigdata__win32_.py
tools/resource_generator/: CMakeLists.txt  example.json  main.cpp
tutorials/: CMakeLists.txt
tutorials/00_hello_sdl/: CMakeLists.txt
tutorials/01_hello_sdl_with_blend2d/: CMakeLists.txt  hello_sdl_with_blend2d.cpp
tutorials/blend2d/: CMakeLists.txt
tutorials/blend2d/01_hello_blend2d/: CMakeLists.txt  main.cpp
tutorials/blend2d/02_path_cubicTo/: CMakeLists.txt  main.cpp
tutorials/blend2d/03_tiger/: CMakeLists.txt  bl-tiger.cpp  bl-tiger.h  main.cpp
tutorials/sdl/: CMakeLists.txt
tutorials/sdl/00_hello_sdl/: CMakeLists.txt
tutorials/sdl/01_hello_sdl/: CMakeLists.txt  main.cpp
tutorials/sdl/02_getting_an_image_on_the_screen/: CMakeLists.txt  main.cpp
tutorials/sdl/03_event_driven_programming/: CMakeLists.txt  main.cpp
tutorials/sdl/04_key_presses/: CMakeLists.txt  main.cpp
tutorials/sdl/05_optimized_surface_loading_and_soft_stretching/: CMakeLists.txt  main.cpp
tutorials/sdl/06_extension_libraries_and_loading_other_image_formats/: CMakeLists.txt  main.cpp
tutorials/sdl/07_texture_loading_and_rendering/: CMakeLists.txt  main.cpp
tutorials/sdl/08_geometry_rendering/: CMakeLists.txt  main.cpp
tutorials/sdl/09_the_viewport/: CMakeLists.txt  main.cpp
tutorials/sdl/10_color_keying/: CMakeLists.txt  main.cpp
tutorials/sdl/11_clip_rendering_and_sprite_sheets/: CMakeLists.txt  main.cpp
tutorials/sdl/12_color_modulation/: CMakeLists.txt  main.cpp
tutorials/sdl/13_alpha_blending/: CMakeLists.txt  main.cpp
tutorials/sdl/14_animated_sprites_and_vsync/: CMakeLists.txt  main.cpp
tutorials/sdl/15_rotation_and_flipping/: CMakeLists.txt  main.cpp
tutorials/sdl/16_true_type_fonts/: CMakeLists.txt  main.cpp
tutorials/sdl/17_mouse_events/: CMakeLists.txt  main.cpp
tutorials/sdl/18_key_states/: CMakeLists.txt  main.cpp
tutorials/sdl/19_gamepads_and_joysticks/: CMakeLists.txt  main.cpp
tutorials/sdl/20_force_feedback/: CMakeLists.txt  main.cpp
tutorials/sdl/21_sound_effects_and_music/: CMakeLists.txt  main.cpp
tutorials/sdl/22_timing/: CMakeLists.txt  main.cpp
tutorials/sdl/23_advanced_timers/: CMakeLists.txt  main.cpp
tutorials/sdl/24_calculating_frame_rate/: CMakeLists.txt  main.cpp
tutorials/sdl/25_capping_frame_rate/: CMakeLists.txt  main.cpp
tutorials/sdl/26_motion/: CMakeLists.txt  main.cpp
tutorials/sdl/27_collision_detection/: CMakeLists.txt  main.cpp
tutorials/sdl/28_per-pixel_collision_detection/: CMakeLists.txt  main.cpp
tutorials/sdl/29_circular_collision_detection/: CMakeLists.txt  main.cpp
tutorials/sdl/30_scrolling/: CMakeLists.txt  main.cpp
tutorials/sdl/31_scrolling_backgrounds/: CMakeLists.txt  main.cpp
tutorials/sdl/32_text_input_and_clipboard_handling/: CMakeLists.txt  main.cpp
tutorials/sdl/33_file_reading_and_writing/: CMakeLists.txt  main.cpp
tutorials/sdl/34_audio_recording/: CMakeLists.txt  main.cpp
tutorials/sdl/35_window_events/: CMakeLists.txt  main.cpp
tutorials/sdl/36_multiple_windows/: CMakeLists.txt  main.cpp
tutorials/sdl/37_multiple_displays/: CMakeLists.txt  main.cpp
tutorials/sdl/38_particle_engines/: CMakeLists.txt  main.cpp
tutorials/sdl/39_tiling/: CMakeLists.txt  main.cpp
tutorials/sdl/40_texture_manipulation/: CMakeLists.txt  main.cpp
tutorials/sdl/41_bitmap_fonts/: CMakeLists.txt  main.cpp
tutorials/sdl/42_texture_streaming/: CMakeLists.txt  main.cpp
tutorials/sdl/43_render_to_texture/: CMakeLists.txt  main.cpp
tutorials/sdl/44_frame_independent_movement/: CMakeLists.txt  main.cpp
tutorials/sdl/45_timer_callbacks/: CMakeLists.txt  main.cpp
tutorials/sdl/46_multithreading/: CMakeLists.txt  main.cpp
tutorials/sdl/47_semaphores/: CMakeLists.txt  main.cpp
tutorials/sdl/48_atomic_operations/: CMakeLists.txt  main.cpp
tutorials/sdl/49_mutexes_and_conditions/: CMakeLists.txt  main.cpp
tutorials/sdl/50_SDL_and_opengl_2/: CMakeLists.txt  main.cpp
tutorials/sdl/51_SDL_and_modern_opengl/: CMakeLists.txt  main.cpp
tutorials/sdl/SDL_ttf/: CMakeLists.txt
