add_subdirectory(SDL_ttf)
add_subdirectory(01_hello_sdl)
add_subdirectory(02_getting_an_image_on_the_screen)
add_subdirectory(03_event_driven_programming)
add_subdirectory(04_key_presses)
add_subdirectory(05_optimized_surface_loading_and_soft_stretching)
add_subdirectory(06_extension_libraries_and_loading_other_image_formats)
add_subdirectory(07_texture_loading_and_rendering)
add_subdirectory(08_geometry_rendering)
add_subdirectory(09_the_viewport)
add_subdirectory(10_color_keying)
add_subdirectory(11_clip_rendering_and_sprite_sheets)
add_subdirectory(12_color_modulation)
add_subdirectory(13_alpha_blending)
add_subdirectory(14_animated_sprites_and_vsync)
add_subdirectory(15_rotation_and_flipping)
add_subdirectory(16_true_type_fonts)
add_subdirectory(17_mouse_events)
add_subdirectory(18_key_states)
add_subdirectory(19_gamepads_and_joysticks)
add_subdirectory(20_force_feedback)
add_subdirectory(21_sound_effects_and_music)
add_subdirectory(22_timing)
add_subdirectory(23_advanced_timers)
add_subdirectory(24_calculating_frame_rate)
add_subdirectory(25_capping_frame_rate)
add_subdirectory(26_motion)
add_subdirectory(27_collision_detection)
add_subdirectory(28_per-pixel_collision_detection)
add_subdirectory(29_circular_collision_detection)
add_subdirectory(30_scrolling)
add_subdirectory(31_scrolling_backgrounds)
add_subdirectory(32_text_input_and_clipboard_handling)
add_subdirectory(33_file_reading_and_writing)
add_subdirectory(34_audio_recording)
add_subdirectory(35_window_events)
add_subdirectory(36_multiple_windows)
add_subdirectory(37_multiple_displays)
add_subdirectory(38_particle_engines)
add_subdirectory(39_tiling)
add_subdirectory(40_texture_manipulation)
add_subdirectory(41_bitmap_fonts)
add_subdirectory(42_texture_streaming)
add_subdirectory(43_render_to_texture)
add_subdirectory(44_frame_independent_movement)
add_subdirectory(45_timer_callbacks)
add_subdirectory(46_multithreading)
add_subdirectory(47_semaphores)
add_subdirectory(48_atomic_operations)
add_subdirectory(49_mutexes_and_conditions)
add_subdirectory(50_SDL_and_opengl_2)
add_subdirectory(51_SDL_and_modern_opengl)